# cmake-cpp-project-template

./: CMakeLists.txt  unix_cmake_ninja_build.sh
